--- a/.github/workflows/build-push-main.yml
+++ b/.github/workflows/build-push-main.yml
@@ -31,4 +31,4 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: GameWaves/website-nextjs:latest
+          tags: ghcr.io/GameWaves/website-nextjs:latest
