fix: :bug:  Change registry

--- a/.github/workflows/pullrequest-dev.yml
+++ b/.github/workflows/pullrequest-dev.yml
@@ -18,12 +18,12 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: gitea.louisgallet.fr
+          username: lgallet
+          password: ${{ secrets.GITEA_TOKEN }}
       -
         name: Build and push
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ghcr.io/gamewaves/website-nextjs:staging
+          tags: gitea.louisgallet.fr/ooth/ooth-nextjs:staging
