--- a/.github/workflows/build-push-main.yml
+++ b/.github/workflows/build-push-main.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: gitea.louisgallet.fr
+          username: lgallet
+          password: ${{ secrets.GITEA_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v5
@@ -31,4 +31,4 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ghcr.io/gamewaves/website-nextjs:latest
+          tags: gitea.louisgallet.fr/ooth/ooth-nextjs:latest
